cities/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cities-svc
spec:
  type: ClusterIP
  selector:
    app: cities
  ports:
    - port: 5000
      protocol: TCP
      targetPort: 8080
